fixed typo problems.

--- a/example-voting-app-kube/result-app-pod.yml
+++ b/example-voting-app-kube/result-app-pod.yml
@@ -5,7 +5,7 @@ kind: Pod
 metadata:
   name: result-app-prod
   labels:
-      name: result-app-prod
+      name: result-app-pod
       app: demo-voting-app
 
 spec:
