--- a/example-voting-app-kube/postgres-pod.yml
+++ b/example-voting-app-kube/postgres-pod.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Pod
 
 metadata:
-  name: postgres-prod
+  name: postgres-pod
   labels:
     name: postgres-pod
     app: demo-voting-app
