--- a/example-voting-app-kube/voting-app-pod.yml
+++ b/example-voting-app-kube/voting-app-pod.yml
@@ -5,7 +5,7 @@ kind: Pod
 metadata:
   name: voting-app-prod
   labels:
-      name: voting-app-prod
+      name: voting-app-pod
       app: demo-voting-app
 
 spec:
