--- a/example-voting-app-kube/worker-app-pod.yml
+++ b/example-voting-app-kube/worker-app-pod.yml
@@ -5,7 +5,7 @@ kind: Pod
 metadata:
   name: worker-app-prod
   labels:
-      name: worker-app-prod
+      name: worker-app-pod
       app: demo-voting-app
 
 spec:
