--- a/k8s-objects-examples/example-deployments/example-party-clippy.yaml
+++ b/k8s-objects-examples/example-deployments/example-party-clippy.yaml
@@ -47,7 +47,7 @@ metadata:
     kubernetes.io/ingress.class: addon-http-application-routing
 spec:
   rules:
-  - host: party-clippy.eastus.aksapp.io
+  - host: party-clippy.b57565928af64bcd8a8b.eastus.aksapp.io
     http:
       paths:
       - backend:
