--- a/service-mesh/istio/sample/httpbin/5-ssl-httpbin-ingress.yaml
+++ b/service-mesh/istio/sample/httpbin/5-ssl-httpbin-ingress.yaml
@@ -4,11 +4,14 @@ metadata:
   name: ssl-httpbin-ingress
   namespace: istio-system
   annotations:
-    kubernetes.io/ingress.class: addon-http-application-routing
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
+  tls:
+  - hosts:
+    - ssl-httpbin.eastus.cloudapp.azure.com
   rules:
-  - host: ssl-httpbin-ingress.a43827f515a9495db0f7.eastus.aksapp.io
+  - host: ssl-httpbin.eastus.cloudapp.azure.com
     http:
       paths:
       - backend:
